--- a/web/package.json
+++ b/web/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "description": "Boilerplate for Gatsby + Sanity + Shopify",
   "version": "0.1.0",
-  "author": "You <kevin@ctrlaltdel.wprld>",
+  "author": "Will Streeter <w.streeter@tastymakers.io>",
   "dependencies": {
     "@babel/plugin-transform-object-assign": "^7.10.4",
     "@babel/template": "^7.10.4",
     "@picostate/react": "^3.0.1",
+    "@reach/router": "^1.3.4",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/client": "^0.147.3",
+    "@sanity/client": "^2.0.1",
     "@sentry/browser": "^5.15.4",
     "@sentry/cli": "^1.52.1",
     "await-timeout": "^1.1.1",
@@ -84,6 +85,7 @@
     "@types/node": "^13.11.1",
     "@types/react-helmet": "^5.0.15",
     "@types/react-transition-group": "^4.2.4",
+
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "postcss-calc": "^6.0.2",
