--- a/web/package.json
+++ b/web/package.json
@@ -68,6 +68,7 @@
     "highlight.js": "^9.18.1",
     "http-proxy-middleware": "^0.21.0",
     "isomorphic-fetch": "^3.0.0",
+    "jsdom": "^16.4.0",
     "js-cookie": "^2.2.1",
     "klaviyo-subscribe": "^1.0.0",
     "markdown-it": "^10.0.0",
